# ai-concept-to-video

./: .gitignore  README.md  debug_chattts.py  main.py  manim_test.py  pyproject.toml  requirements.txt
backend/: main.py
custom/: 50 days.html  final_prompt_Testing  manim  manim_and_script_prompt.md  new_prompt  prompt  script  title&desc  title&desc.md  voiceover_manim
frontend/: app.py
frontend/pages/: chatting.py  voiceover_studio.py  workflow.py
prompts/: little_big_version.md  manim_and_script_prompt.md
src/agent/: model_loader.py  progress.py  seo_generator.py
src/chatbot/agent/: chat_agent.py
src/chatbot/graph/: chat_graph.py  chat_state.py
src/chatbot/prompts/: chat_system_prompt.py
src/mcp/: client.py  getrefreshtoken.py  server.py  toolnode.py
src/nodes/: audio_duration.py  manim_renderer.py  scene_planner.py  script_generator.py  tts_generator.py  video_stitcher.py
src/pipeline/: __init__.py  graph.py  pipeline.py  render.py  runner.py  state.py  stitching.py  test_scene.py  utils.py
src/tts/: __init__.py  coqui_provider.py  deepgram_provider.py  elevenlabs_provider.py  factory.py  google_provider.py  open_ai.py
src/utils/: file_utils.py  script_to_gerate_subfolder_base_on_calander.py
src/voiceover_pipeline/: __init__.py  runner.py
test_media/: claude.py  vit.py
