[project]
name = "yt-video-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "elevenlabs>=0.3.0",
    "fastapi>=0.110.0",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "gtts>=2.5.1",
    "langchain>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.21",
    "manim>=0.18.0",
    "mcp>=1.27.0",
    "moviepy>=1.0.3,<2.0.0",
    "omegaconf>=2.3.0",
    "openai>=1.14.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "soundfile>=0.13.1",
    "streamlit>=1.31.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "torchvision>=0.17.0",
    "transformers==4.36.2",
    "tts==0.21.3",
    "uvicorn>=0.28.0",
    "vector-quantize-pytorch>=1.28.1",
    "vocos>=0.1.0",
]
