[project]
name = "yt-short-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "elevenlabs>=1.0.0",
    "fastapi>=0.110.0",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-genai>=1.71.0",
    "gtts>=2.5.1",
    "langchain>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "manim>=0.18.0",
    "mcp>=1.0.0",
    "moviepy>=1.0.3",
    "openai>=1.20.0",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "python-slugify>=8.0.0",
    "requests>=2.31.0",
    "stable-ts>=2.19.1",
    "streamlit>=1.31.0",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
    "transformers>=4.33.0,<4.40.0",
    "tts==0.21.3",
    "uvicorn>=0.28.0",
]
